Feature/querying (#22)
* Feat: implement source filtering

* Feat: create Chicago URI Builder

* Feat: create Harvard URI Builder

* Feat: implement Chicago URI Builder

* Feat: implement Harvard URI Builder

* Fix: fix api service tests

* Fix: fix incorrect uri handling in clients

* Refactor: refactor clients

* Feat: Implement search querying

* Feat: Implement sorting for External API calls

* Feat: Implement combined sorting

* Feat: Implement Filtering

* Fix: fix for failing test